# redline

./: .gitignore  ANALYZERS_GUIDE.md  ANALYZERS_SUMMARY.md  BERT_OFFLINE_ONLINE.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  PYTHON_HOME_USAGE.md  SPACY_MODULAR_ANALYZERS.md  SPACY_REFACTORING_COMPLETE.md  SPACY_SETUP.md  devbox.json  requirements.txt
crates/core/: Cargo.toml
crates/core/examples/: README.md  advanced_pipeline.rs  analyzers_demo.rs  basic_usage.rs  bert_offline_online.rs  spacy_modular_demo.rs  spacy_syntactic_demo.rs
crates/core/src/: algorithms.rs  config.rs  diff.rs  engine.rs  execution.rs  lib.rs  mapping.rs  metrics.rs  normalizers.rs  pipeline.rs  token_alignment.rs  tokenizers.rs
crates/core/src/algorithm/: histogram.rs  mod.rs  myers.rs  patience.rs
crates/core/src/analyzer/: mod.rs  selectors.rs
crates/core/src/analyzer/classifiers/: bert_semantic.rs  mod.rs  naive_bayes.rs  readability.rs  semantic.rs  spacy_alignment.rs  spacy_dependency.rs  spacy_grammar.rs  spacy_pos.rs  spacy_structural.rs  stylistic.rs  syntactic.rs
crates/core/src/analyzer/group/: clustering.rs
crates/core/src/analyzer/ml/: bert_semantic.rs  mod.rs  naive_bayes.rs
crates/core/src/analyzer/multi/: mod.rs  patterns.rs  statistics.rs  trends.rs
crates/core/src/analyzer/single/: category.rs  features.rs  mod.rs  readability.rs  stylistic.rs
crates/core/src/analyzer/spacy/: alignment.rs  dependency_parse.rs  grammar.rs  mod.rs  part_of_speech.rs  structural.rs  syntactic.rs
crates/core/src/analyzers/: mod.rs  multi.rs  selectors.rs  single.rs
crates/core/src/analyzers/classifiers/: mod.rs  readability.rs
crates/core/src/analyzers/multi/: clustering.rs  mod.rs  patterns.rs  statistics.rs  trends.rs
crates/core/src/analyzers/single/: category.rs  features.rs  mod.rs  readability.rs  semantic.rs  stylistic.rs
crates/core/src/classifiers/: bert_semantic.rs  ml.rs  mod.rs  naive_bayes.rs  semantic.rs  stylistic.rs  syntactic.rs
crates/core/src/nlp/: mod.rs  spacy.rs
crates/core/src/util/: mod.rs  spacy.rs  syntactic_token.rs  token_statistics.rs
crates/core_v1/: Cargo.toml  DESIGN.md  README.md  TECHNICAL_SPEC.md
crates/core_v1/plan/: DESIGN.md  TECHNICAL_SPEC.md
flakes/: .gitignore
flakes/libtorch/: README.md  flake.nix  update_hashes.sh
